# PiCam

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: pi-build.yml
conf/: opencv.conf
data/: README.md
docker/: Dockerfile-armhf
include/: FaceDetector.h  Graphics.h  MJPEGWriter.h  PiCam.h  faceDetector.h  graphics.h  mjpegWriter.h  piCam.h  piCamFancy.h  piCamLite.h  servoStand.h  vec2.h
script/: build-in-docker.sh  install-opencv-armh.sh  install-opencv-armhf.sh  install-opencv.sh  install.sh  opencv.pc  pi-setup.sh
src/: main.cpp
src/cam/: FaceDetector.cpp  Graphics.cpp  MJPEGWriter.cpp  PiCam.cpp  PiCam.h  faceDetector.cpp  graphics.cpp  mjpegWriter.cpp  piCam.cpp  piCamFancy.cpp  piCamLite.cpp  picam.cpp  picam.h  servoStand.cpp
src/cam/detector/: FaceDetector.cpp  FaceDetector.h  facedetector.cpp  facedetector.h
src/cam/graphics/: Graphics.cpp  graphics.cpp  graphics.h
src/cam/server/: MJPEGWriter.cpp  MJPEGWriter.h
